# dapi-docs-webhook-watcher

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  noxfile.py  pyproject.toml  requirements.in  requirements.txt  runner.py
.github/: dependabot.yml  renovate.json
.github/actions/setup-py/: action.yml
.github/workflows/: ci.yml  docker-publish.yml  freeze-for-pr.yml  lint.yml  reformat.yml  resync-piped.yml  type-check.yml  update-licence.yml  upgrade-locks.yml  verify-locks.yml
dev-requirements/: constraints.txt  type-checking.in  type-checking.txt
pipelines/: codespell.nox.py  config.py  format.nox.py  mypy.nox.py  nox.py  pyright.nox.py  ruff.nox.py  utils.nox.py
